--- a/unexe/templates/households.html
+++ b/unexe/templates/households.html
@@ -167,19 +167,19 @@
  			  <div class="input-group">
  					<div class="col-md-2">
 				    <label>{%trans "Property area (m<sup>2</sup>)" %}</label>
-				    <select class="form-control"><option>Please Select</option></select>
+				    <select class="form-control" name="property_area" id="property_area"></select>
 				    </div>
  					<div class="col-md-2">
 				    <label>{% trans "Garden area (m<sup>2</sup>)" %}</label>
-				    <select class="form-control"><option>Please Select</option></select>
+				    <select class="form-control" name="garden_area" id="garden_area"></select>
 				    </div>
  					<div class="col-md-2">
 				    <label>{%trans "Pervious area (m<sup>2</sup>)" %}</label>
-				    <select class="form-control"><option>Please Select</option></select>
+				    <select class="form-control" name="pervious_area" id="pervious_area"></select>
 				    </div>
  					<div class="col-md-2">
 				    <label>{%trans "Roof area (m<sup>2</sup>)" %}</label>
-				    <select class="form-control"><option>Please Select</option></select>
+				    <select class="form-control" name="roof_area" id="roof_area"></select>
 				    </div>				    
  					<div class="col-md-4">
 				    <label>{% trans "Outdoor facilities" %}</label><br/>
