Corrected athens timestamp to match athens timezone

--- a/unexe/templates/dashboard.html
+++ b/unexe/templates/dashboard.html
@@ -88,23 +88,23 @@ $(window).load(function() {
 	<!-- tab based navigation -->
 	<ul class="tabs nav nav-tabs" id="controltab">
  		<li class="active"><a href="#summary" data-toggle="tab"><span class="glyphicon glyphicon-home"></span> {% trans "Home" %}</a></li>
-		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Water Analysis (Use cases)" %} <span class="caret"></span></a>
+		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Water Analysis" %} <span class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu" id="waterusecase"> 		
-				<li><a href="#water" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC1.1" %}</a></li>
+				<li><a href="#water" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC1.1 (Monitoring of Water Consumption)" %}</a></li>
 				{% if not user.is_staff and not user.is_superuser %}
-					<li><a href="#cuc53" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.3 (Forecast Water Bill)" %}</a></li>
                     <li><a href="#cuc31" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC3.1 (Compare Current and Historical Water Consumption)" %}</a></li>
 					<li><a href="#cuc32" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC3.2 (Compare Water Consumption with other Consumers)" %}</a></li>
 					<li><a href="#cuc33" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC3.3 (Compare water consumption with standard profiles)" %}</a></li>
-					<li><a href="#cuc34" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC3.4 (Compare household water consumption with most efficient users)" %}</a></li>					
-					<li><a href="#cuc52" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.2 (Receive information on specific and alternatives pricing schemes)" %}</a></li>										
+					<li><a href="#cuc34" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC3.4 (Compare household water consumption with most efficient users)" %}</a></li>
+					<li><a href="#cuc52" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.2 (Receive information on specific and alternatives pricing schemes)" %}</a></li>
+                    <li><a href="#cuc53" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.3 (Forecast Water Bill)" %}</a></li>
 				{% endif %}
 			</ul>
 		</li>
         {% if has_energy %}
-		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Energy Analysis (Use cases)" %} <span class="caret"></span></a>
+		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Energy Analysis" %} <span class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu" id="energyusecase">
-                <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1" %}</a></li>
+                <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1: Monitoring of Energy Consumption" %}</a></li>
 				<li><a href="#cuc41" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC4.1 & Use Case C_UC5.4 (Compare energy pattern & Forecast the component of energy bill)" %}</a></li>
 				<!-- <li><a href="#cuc54" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.4 (Forecast the component of next energy bill associated with water consumption)" %}</a></li> -->												
 			</ul>
