cost graphs show correct currency, now.

--- a/unexe/templates/usecase/c_uc3.4.html
+++ b/unexe/templates/usecase/c_uc3.4.html
@@ -13,7 +13,7 @@ function uc34Chart(data)
 	
 	var w = domutil.getdivwidth("c_uc34chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
 	var dim = {"width":w,"height":450}; //width and height of chart container	
-	chartutil.uc32barplot1("#c_uc34chart",dim,data["chart"]);
+	chartutil.uc32barplot1("#c_uc34chart",dim,data["chart"], data["currency"]);
 	
 	var values= data["yourdata"]["month"];
 	household = values["sum_units"];
