--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -13,7 +13,7 @@ function uc32Chart(data)
 	//alert(JSON.stringify(data["chart"]));
 	var w = domutil.getdivwidth("c_uc32chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
 	var dim = {"width":w,"height":450}; //width and height of chart container	
-	chartutil.uc32barplot1("#c_uc32chart",dim,data["chart"]);
+	chartutil.uc32barplot1("#c_uc32chart",dim,data["chart"], data["currency"]);
 	
 	var values= data["yourdata"]["month"];
 	household = values["sum_units"];
@@ -99,7 +99,7 @@ $(window).load(function() {
     if(domutil.hasCssclass("#c_uc32container","hide") && id=="#cuc32") //tab id value, need to make global to make effective and avoid error
     {
     	domutil.removeCssclass("#c_uc32container","hide");
-    	//uc32Chart(data);
+    	uc32Chart(data);
     }//--end if	 	
 });
 
@@ -253,13 +253,11 @@ function c_uc32disabled()
 		-->
 		</div>	 	
 	 </div>
-    </div>
+    </div>    
 	<!-- End chart menu/toolbar -->
 
 	<!--  charts and table -->
 	<div class="panel-body" id="panel">
-        <div id=""><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>
-        <p id="init_prompt32" style="font-size: 24px; text-align: center; color: #aaa">{% trans "Please, select a period to analyse!" %}</p>
 		<div id="c_uc32cont" class="row hide">
 		<div id="c_uc32title"><p class="bg-primary text-center"><strong></strong></p></div>
 		<div class="col-md-5" id="c_uc32chartcont"></div>
@@ -283,6 +281,31 @@ function c_uc32disabled()
 		</div>		
 		</div>
 			
+		<div class="row hide" id="c_uc32container">
+			<div id="c_uc32title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
+			<div class="col-md-7" id="c_uc32chart"></div>
+			<div class="col-md-5" id="c_uc32summary">
+			    <div class="panel panel-primary">
+			        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+			        <ul class="list-group list-group-flush">
+				        <li class="list-group-item" id="c_uc32Yearly"></li>
+				        <li class="list-group-item" id="c_uc32Half"></li>
+				        <li class="list-group-item" id="c_uc32Quarter"></li>
+				        <li class="list-group-item" id="c_uc32Month"></li>
+			        </ul>
+			    </div>
+			    <div class="panel panel-primary">
+			        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
+			        <ul class="list-group list-group-flush">
+				        <li class="list-group-item" id="c_uc32yearly"></li>
+				        <li class="list-group-item" id="c_uc32half"></li>
+				        <li class="list-group-item" id="c_uc32quarter"></li>
+				        <li class="list-group-item" id="c_uc32month"></li>
+			            <li class="list-group-item text-center"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
+			        </ul>
+			    </div>				    				
+			</div>		
+		</div>							
 	</div>
 	<!--  End charts and table -->	        
 </div>
