adding leakage and burst notifications

--- a/unexe/templates/sidebar.html
+++ b/unexe/templates/sidebar.html
@@ -32,6 +32,13 @@
                 Energy Tariff: Night Saver<br/>Rate: 3.25/Unit
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><div class="panel-title">{% trans "NOTIFICATIONS" %}</div></div>
+            <div class="panel-body">
+                <div class="table-responsive" id="user_events">
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
