--- a/unexe/templates/summary.html
+++ b/unexe/templates/summary.html
@@ -22,7 +22,7 @@
                             {% trans "Learn how you can improve the water efficiency of your household and how best to reduce your water consumption, through the new iWIDGET On-line Course on Water" %}!
                             </div>
                             <div class="col-md-2">
-                                <a href="http://www.i-widget-elearning.eu/iWidget/login/index.php?CustomUsername={{ user.username }}&token=b4ea06d42eeeb30641abdaea91610a22"><button class="btn btn-primary" type="button">{% trans "Click to Learn More" %}</button></a>
+                                <a target="_blank" href="http://www.i-widget-elearning.eu/iWidget/login/index.php?CustomUsername={{ user.username }}&token=b4ea06d42eeeb30641abdaea91610a22"><button class="btn btn-primary" type="button">{% trans "Click to Learn More" %}</button></a>
                             </div>
                         </div>
                     </div>
