--- a/iwidget/templates/page_with_charts.html
+++ b/iwidget/templates/page_with_charts.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load general_tags %}
+ load general_tags %}{{  cons }} }} {%  trans ""litres %} %}
 
 {% block extra_head %}
   <!--[if lt IE 9]>
