--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -6,7 +6,7 @@
 {% endaddtoblock %}
 <div class="panel panel-default">
     <!-- chart menu/toolbar -->
-    <div class="panel-heading clearfix" id="chartcontrol">
+    <div class="panel-heading clearfix" id="">
         <div class="row">
             <div class="pull-right col-md-1">
                 <img src="{{STATIC_URL}}/images/pdf.png" alt="Export to PDF" title="Export to PDF" /><img src="{{STATIC_URL}}/images/save.png" alt="Save Raw Data" title="Save Raw Data" />
@@ -15,44 +15,44 @@
             <div class="col-md-3">
                 <p><strong>{% trans "Choose Interval Type" %}</strong></p>
                 <select class="chart-selector form-control" name="resolution1" id="resolution1" onchange="toggleDeserialization();">
-                    <option value="15min" {% if action == "15min" %}selected{% endif %}>Fifteen minute (1 day only)</option>
-                    <option value="hourly" {% if action == "hourly" %}selected{% endif %}>Hourly (1 day only)</option>
-                    <option value="daily" {% if action == "daily" %}selected{% endif %}>Daily</option>
-                    <option value="daily_capita" {% if action == "daily_capita" %}selected{% endif %}>Daily Per Capita</option>
-                    <option value="monthly" {% if action == "monthly" %}selected{% endif %}>Monthly</option>
-                    <option value="monthly_capita" {% if action == "monthly_capita" %}selected{% endif %}>Monthly Per Capita</option>
-                    <option value="monthly_cost" {% if action == "monthly_cost" %}selected{% endif %}>Monthly Cost</option>
+                    <option value="15min" {% if action == "15min" %}selected{% endif %}>{% trans "Fifteen minute (1 day only)" %}</option>
+                    <option value="hourly" {% if action == "hourly" %}selected{% endif %}>{% trans "Hourly (1 day only)" %}</option>
+                    <option value="daily" {% if action == "daily" %}selected{% endif %}>{% trans "Daily" %}</option>
+                    <option value="daily_capita" {% if action == "daily_capita" %}selected{% endif %}>{% trans "Daily Per Capita" %}</option>
+                    <option value="monthly" {% if action == "monthly" %}selected{% endif %}>{% trans "Monthly" %}</option>
+                    <option value="monthly_capita" {% if action == "monthly_capita" %}selected{% endif %}>{% trans "Monthly Per Capita" %}</option>
+                    <option value="monthly_cost" {% if action == "monthly_cost" %}selected{% endif %}>{% trans "Monthly Cost" %}</option>
                 </select>
             </div>
             <div class="col-md-3">
                 <div id="res37" class="des2">
                     <p><strong>{% trans "Choose Data Resolution" %}</strong></p>
                     <select class="chart-selector form-control" name="resolution2" id="resolution2" onchange="togglePeriod()">
-                        <option value="total" {% if action2 == "total" %}selected{% endif %}>Total</option>
-                        <option value="day_night" {% if action2 == "day_night" %}selected{% endif %}>Day / Night</option>
-                        <option id="only10" value="summer_winter" {% if action2 == "summer_winter" %}selected{% endif %}>Summer / Winter</option>
+                        <option value="total" {% if action2 == "total" %}selected{% endif %}>{% trans "Total" %}</option>
+                        <option value="day_night" {% if action2 == "day_night" %}selected{% endif %}>{% trans "Day / Night" %}</option>
+                        <option id="only10" value="summer_winter" {% if action2 == "summer_winter" %}selected{% endif %}>{% trans "Summer / Winter" %}</option>
                     </select>
                 </div>
             </div>
             <div class="col-md-3">
                 <p>{% trans "Click button to view charts" %}</p>
-                <button onclick="fetchCharts('{{ request.user.username }}')" class="btn btn-primary" type="button">Compare</button>
+                <button onclick="fetchCharts('{{ request.user.username }}')" class="btn btn-primary" type="button">{% trans "Compare" %}</button>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12" id="prd_sw">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_sw" checked="checked" name="period_sw" value="0" onclick="hideYearSW()"/> This Year
+                    <input type="radio" id="period_sw" checked="checked" name="period_sw" value="0" onclick="hideYearSW()"/>{% trans " This Year" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_sw" name="period_sw" value="1" onclick="hideYearSW();"  /> Previous Year
+                    <input type="radio" id="period_sw" name="period_sw" value="1" onclick="hideYearSW();"  />{% trans " Previous Year" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_sw" name="period_sw" value="custom1" onclick="showYearSW1();" /> Specify Period
+                    <input type="radio" id="period_sw" name="period_sw" value="custom1" onclick="showYearSW1();" />{% trans " Specify Period" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_sw" name="period_sw" value="custom2" onclick="showYearSW2()" /> Specify Two Periods
+                    <input type="radio" id="period_sw" name="period_sw" value="custom2" onclick="showYearSW2()" />{% trans " Specify Two Periods" %}
                 </label>
             </div>
         </div>
@@ -60,16 +60,16 @@
             <div class="col-md-12" id="prd_day">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_d" checked="checked" name="period_d" value="7days" onclick="hideCalendars()"/> Last 7 Days
+                    <input type="radio" id="period_d" checked="checked" name="period_d" value="7days" onclick="hideCalendars()"/>{% trans " Last 7 Days" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_d" name="period_d" value="month" onclick="hideCalendars()"  /> Last Month Days
+                    <input type="radio" id="period_d" name="period_d" value="month" onclick="hideCalendars()"  />{% trans " Last Month Days" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_d" name="period_d" value="custom1" onclick="showCalendar1();" /> Specify Period
+                    <input type="radio" id="period_d" name="period_d" value="custom1" onclick="showCalendar1();" />{% trans " Specify Period" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_d" name="period_d" value="custom2" onclick="showCalendar2()" /> Specify Two Periods
+                    <input type="radio" id="period_d" name="period_d" value="custom2" onclick="showCalendar2()" />{% trans " Specify Two Periods" %}
                 </label>
             </div>
         </div>
@@ -77,19 +77,19 @@
             <div class="col-md-12" id="prd_mon">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_m" checked="checked" name="period_m" value="3" onclick="hideDateYear()"/> Last 3 Months
+                    <input type="radio" id="period_m" checked="checked" name="period_m" value="3" onclick="hideDateYear()"/>{% trans " Last 3 Months" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_m" name="period_m" value="6" onclick="hideDateYear()"  /> Last 6 Months
+                    <input type="radio" id="period_m" name="period_m" value="6" onclick="hideDateYear()"  />{% trans " Last 6 Months" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_m" name="period_m" value="12" onclick="hideDateYear()" /> Last 12 Months
+                    <input type="radio" id="period_m" name="period_m" value="12" onclick="hideDateYear()" />{% trans " Last 12 Months" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_m" name="period_m" value="custom1" onclick="showDateYear1();" /> Specify Period
+                    <input type="radio" id="period_m" name="period_m" value="custom1" onclick="showDateYear1();" />{% trans " Specify Period" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_m" name="period_m" value="custom2" onclick="showDateYear2()" /> Specify Two Periods
+                    <input type="radio" id="period_m" name="period_m" value="custom2" onclick="showDateYear2()" />{% trans " Specify Two Periods" %}
                 </label>
             </div>
         </div>
@@ -127,41 +127,43 @@
         <div class="row">
             <div class="col-md-12 date_yr" id="date_year1">
                 <div class="form-inline col-md-6" id="c_uc31_daterange">
-                    FROM
+                    {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                    {% trans "FROM" %}
                     <div class="form-group">
                         <select id="c_uc31stmonth" class="form-control" required="true">
-                            <option value="1">January</option>
-                            <option value="2">February</option>
-                            <option value="3">March</option>
-                            <option value="4">April</option>
-                            <option value="5">May</option>
-                            <option value="6">June</option>
-                            <option value="7">July</option>
-                            <option value="8">August</option>
-                            <option value="9">September</option>
-                            <option value="10">October</option>
-                            <option value="11">November</option>
-                            <option value="12">December</option>
+                            <option value="1">{% trans "January" %}</option>
+                            <option value="2">{% trans "February" %}</option>
+                            <option value="3">{% trans "March" %}</option>
+                            <option value="4">{% trans "April" %}</option>
+                            <option value="5">{% trans "May" %}</option>
+                            <option value="6">{% trans "June" %}</option>
+                            <option value="7">{% trans "July" %}</option>
+                            <option value="8">{% trans "August" %}</option>
+                            <option value="9">{% trans "September" %}</option>
+                            <option value="10">{% trans "October" %}</option>
+                            <option value="11">{% trans "November" %}</option>
+                            <option value="12">{% trans "December" %}</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <select id="c_uc31styear" class="form-control" required="true"></select>
                     </div>
-                    TO
+                    {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                    {% trans "TO" %}
                     <div class="form-group">
                         <select id="c_uc31endmonth" class="form-control" required="true">
-                            <option value="1">January</option>
-                            <option value="2">February</option>
-                            <option value="3">March</option>
-                            <option value="4">April</option>
-                            <option value="5">May</option>
-                            <option value="6">June</option>
-                            <option value="7">July</option>
-                            <option value="8">August</option>
-                            <option value="9">September</option>
-                            <option value="10">October</option>
-                            <option value="11">November</option>
-                            <option value="12">December</option>
+                            <option value="1">{% trans "January" %}</option>
+                            <option value="2">{% trans "February" %}</option>
+                            <option value="3">{% trans "March" %}</option>
+                            <option value="4">{% trans "April" %}</option>
+                            <option value="5">{% trans "May" %}</option>
+                            <option value="6">{% trans "June" %}</option>
+                            <option value="7">{% trans "July" %}</option>
+                            <option value="8">{% trans "August" %}</option>
+                            <option value="9">{% trans "September" %}</option>
+                            <option value="10">{% trans "October" %}</option>
+                            <option value="11">{% trans "November" %}</option>
+                            <option value="12">{% trans "December" %}</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -198,10 +200,12 @@
             <div class="col-md-12 sw_year" id="sw_year1">
                 <div class="form-group">
                     <div class="form-group col-md-3">
-                        <p>From: <select id="c_uc31swyear1from" class="form-control"></select></p>
+                        {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                        <p>{% trans "From" %}: <select id="c_uc31swyear1from" class="form-control"></select></p>
                     </div>
                     <div class="form-group col-md-3">
-                        <p>To: <select id="c_uc31swyear1to" class="form-control"></select></p>
+                        {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                        <p>{% trans "To" %}: <select id="c_uc31swyear1to" class="form-control"></select></p>
                     </div>
                 </div>
             </div>
@@ -210,10 +214,12 @@
             <div class="col-md-12 sw_year" id="sw_year2">
                 <div class="form-group">
                     <div class="form-group col-md-3">
-                        <p>From: <select id="c_uc31swyear2from" class="form-control"></select></p>
+                        {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                        <p>{% trans "From" %}: <select id="c_uc31swyear2from" class="form-control"></select></p>
                     </div>
                     <div class="form-group col-md-3">
-                        <p>To: <select id="c_uc31swyear2to" class="form-control"></select></p>
+                        {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                        <p>{% trans "To" %}: <select id="c_uc31swyear2to" class="form-control"></select></p>
                     </div>
                 </div>
             </div>
@@ -221,7 +227,8 @@
         <div class="row">
             <div class="col-md-12 date_yr" id="date_year2">
                 <div class="form-inline col-md-6" id="c_uc31_daterange">
-                    FROM
+                    {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                    {% trans "FROM" %}
                     <div class="form-group">
                         <select id="c_uc31stmonth2" class="form-control" required="true">
                             <option value="1">January</option>
@@ -241,7 +248,8 @@
                     <div class="form-group">
                         <select id="c_uc31styear2" class="form-control" required="true"></select>
                     </div>
-                    TO
+                    {% comment %}Translators: Context -> FROM January TO February {% endcomment %}
+                    {% trans "TO" %}
                     <div class="form-group">
                         <select id="c_uc31endmonth2" class="form-control" required="true">
                             <option value="1">January</option>
@@ -270,7 +278,6 @@
     </div>
 </div>
     <script>
-
         $(".des2").hide();
         $("#prd_mon").hide();
         $("#prd_hrly").hide();
