preparing for UC2.1. Minor bug fixes in UC1.2

--- a/uc_01_2/templates/_chart.html
+++ b/uc_01_2/templates/_chart.html
@@ -3,14 +3,14 @@
 {% load general_tags %}
 
 
-<h2>{% trans "Per appliance water consumption" %}</h2>
-<div class="col-md-6">
-    <div id="pie_uc12" style="width: 90%; height: 400px;">
+<h2 class="text-center">{% trans "Per appliance water consumption" %}</h2>
+<div class="col-md-7">
+    <div id="pie_uc12" style="width: 100%; height: 600px;">
 
 
     </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-5">
     <table class="table table-condensed table-striped table-hover">
         <thead class="">
         <tr>
@@ -19,20 +19,36 @@
         </tr>
         </thead>
         <tbody>
-            <tr> <td>{% trans "WC (toilet flushing)" %}</td><td>{{ consumptions.wc|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Showers" %}</td><td>{{ consumptions.shower|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Taps (Kitchen / Bathroom)" %}</td><td>{{ consumptions.tap|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Washing Maching" %}</td><td>{{ consumptions.washing_machine|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Dish Washer" %}</td><td>{{ consumptions.dish_washer|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Baths" %}</td><td>{{ consumptions.bath|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Other" %}</td><td>{{ consumptions.other|floatformat:1 }} litres</td> </tr>
-            <tr> <td>{% trans "Outdoor" %}</td><td>{{ consumptions.outdoor|floatformat:1 }} litres</td> </tr>
+            {% if wc %}
+                <tr> <td>{% trans "WC (toilet flushing)" %}</td><td>{{ consumptions.wc|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if shower %}
+                <tr> <td>{% trans "Showers" %}</td><td>{{ consumptions.shower|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if tap %}
+                <tr> <td>{% trans "Taps (Kitchen / Bathroom)" %}</td><td>{{ consumptions.tap|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if washing_machine %}
+                <tr> <td>{% trans "Washing Maching" %}</td><td>{{ consumptions.washing_machine|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if dish_washer %}
+                <tr> <td>{% trans "Dish Washer" %}</td><td>{{ consumptions.dish_washer|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if bath %}
+                <tr> <td>{% trans "Baths" %}</td><td>{{ consumptions.bath|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if other %}
+                <tr> <td>{% trans "Other" %}</td><td>{{ consumptions.other|floatformat:1 }} litres</td> </tr>
+            {% endif %}
+            {% if outdoor %}
+                <tr> <td>{% trans "Outdoor" %}</td><td>{{ consumptions.outdoor|floatformat:1 }} litres</td> </tr>
+            {% endif %}
             <tr>
                 <td>
-                    <strong>{% trans "Total Consumption in Liters" %}</strong>
+                    <strong>{% trans "Total Consumption in Litres" %}</strong>
                 </td>
                 <td>
-                    <strong>{{ total|floatformat:1 }} {% trans "litres" %}</strong>
+                    <strong>{{ total }} {% trans "litres" %}</strong>
                 </td>
 
             </tr>
@@ -42,14 +58,30 @@
 
 <script>
     var pie_data = [
-        { label: "WC (Toilet Flashing)", data: {{ consumptions.wc }}, color: "#DEA56E" },
-        { label: "Showers", data: {{ consumptions.shower }}, color: "#D7812A" },
-        { label: "Taps (Kitchen / Bathroom)", data: {{ consumptions.tap }}, color: "#7B6D63" },
-        { label: "Washing Machine", data: {{ consumptions.washing_machine }}, color: "#B13406" },
-        { label: "Dish Washer", data: {{ consumptions.dish_washer }}, color: "#A3835D" },
-        { label: "Bath", data: {{ consumptions.bath }}, color: "#51342E" },
-        { label: "Other", data: {{ consumptions.other }}, color: "#893C4E" },
-        { label: "Outdoor", data: {{ consumptions.outdoor }}, color: "#DDB25E" }
+        {% if wc %}
+            { label: '{% trans "WC (Toilet Flashing)" %}', data: {{ consumptions.wc }}, color: "#4B5075" },
+        {% endif %}
+        {% if shower %}
+            { label: '{% trans "Showers" %}', data: {{ consumptions.shower }}, color: "#976384" },
+        {% endif %}
+        {% if tap %}
+            { label: '{% trans "Taps (Kitchen / Bathroom)" %}', data: {{ consumptions.tap }}, color: "#7B6D63" },
+        {% endif %}
+        {% if washing_machine %}
+            { label: '{% trans "Washing Machine" %}', data: {{ consumptions.washing_machine }}, color: "#B13406" },
+        {% endif %}
+        {% if dish_washer %}
+            { label: '{% trans "Dish Washer" %}', data: {{ consumptions.dish_washer }}, color: "#A3835D" },
+        {% endif %}
+        {% if bath %}
+            { label: '{% trans "Bath" %}', data: {{ consumptions.bath }}, color: "#51342E" },
+        {% endif %}
+        {% if other %}
+            { label: '{% trans "Other" %}', data: {{ consumptions.other }}, color: "#893C4E" },
+        {% endif %}
+        {% if outdoor %}
+            { label: '{% trans "Outdoor" %}', data: {{ consumptions.outdoor }}, color: "#4B966C" }
+        {% endif %}
     ];
 
     var pie_chart = $("#pie_uc12");
@@ -57,7 +89,15 @@
     $.plot(pie_chart, pie_data, {
         series: {
             pie: {
-                show: true
+                show: true,
+                radius: 6 / 7,
+                label:{
+                    show: true,
+                    formatter: function (label, series) {
+                        return '<div style="font-size:8pt;text-align:center;padding:2px;color:black;text-shadow: 2px 2px 2px rgba(150, 150, 150, 0.81);">' + label + '<br/>' + series.data[0][1] + ' lt. </div>';
+
+                    }
+                }
             }
         },
         legend: {
