--- a/unexe/templates/dashboard.html
+++ b/unexe/templates/dashboard.html
@@ -106,7 +106,8 @@ $(window).load(function() {
         {% if has_energy %}
 		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Energy Analysis" %} <span class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu" id="energyusecase">
-                <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1: Monitoring of Energy Consumption" %}</a></li>
+                <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC1.1: Monitoring of Energy Consumption" %}</a></li>
+                <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1: Energy consumption related to water" %}</a></li>
 				<li><a href="#cuc41" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC4.1 & Use Case C_UC5.4 (Compare energy pattern & Forecast the component of energy bill)" %}</a></li>
 				<!-- <li><a href="#cuc54" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.4 (Forecast the component of next energy bill associated with water consumption)" %}</a></li> -->												
 			</ul>
@@ -174,6 +175,9 @@ $(window).load(function() {
                 {% include "uc_01_2_index.html" %}
             </div>
 
+            <div class="tab-pane tabcontent" id="cuc21">
+                {% include "uc_02_1_index.html" %}
+            </div>
         {% endif %}
 		
 		
