--- a/uc_02_1/templates/_inner_02_1.html
+++ b/uc_02_1/templates/_inner_02_1.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% load i18n %}
+{% load sekizai_tags %}
+{% load general_tags %}
 
-</body>
-</html>
+
+<h2 class="text-center">{% trans "Energy related water consumption" %}</h2>
+<div class="col-md-7">
+    <div id="pie_uc21" style="width: 100%; height: 600px;">
+
+    </div>
+</div>
+<div class="col-md-5">
+    <table class="table table-condensed table-striped table-hover">
+        <thead class="">
+        <tr>
+            <th>{% trans "Type" %}</th>
+            <th>{% trans "Consumption" %}</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <strong>{% trans "Energy related" %}</strong>
+                </td>
+                <td>
+                    <strong>{{ energy }} {% trans "litres" %}</strong>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <strong>{% trans "Rest uses" %}</strong>
+                </td>
+                <td>
+                    <strong>{{ rest }} {% trans "litres" %}</strong>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<script>
+    var pie_data = [
+        { label: '{% trans "Energy Related" %}', data: {{ energy }}, color: "#4B966C" },
+        { label: '{% trans "Rest Uses" %}', data: {{ rest }}, color: "#893C4E" }
+    ];
+
+    var pie_chart = $("#pie_uc21");
+
+    $.plot(pie_chart, pie_data, {
+        series: {
+            pie: {
+                show: true,
+                radius: 6 / 7,
+                label:{
+                    show: true,
+                    formatter: function (label, series) {
+                        return '<div style="font-size:8pt;text-align:center;padding:2px;color:black;text-shadow: 2px 2px 2px rgba(150, 150, 150, 0.81);">' + label + '<br/>' + series.data[0][1] + ' lt. </div>';
+
+                    }
+                }
+            }
+        },
+        legend: {
+            show: false
+        }
+    });
+</script>
